--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,8 @@ layout: compress
 
     {{ content }}
 
-    </script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS_CHTML"></script>
 
     <div class="page__footer">
       <footer>
