--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@ layout: compress
     {{ content }}
 
     <script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS_CHTML"></script>
+        src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
     tex2jax: {
